          or equal to  single buffer;
 - dialogWindow: Fixed a bug that open the window before mouse
                 button release, automatically selecting a dialog
                 option sometimes;
 - Removed collision with dead characters to avoid potential path block;
 - dntPartEditor: added mouse cursor render;
 - dntPartEditor: fixed a bug on current particle counter and elements menu;

================================================
|                Version 0.9                   |
|            Released: 2012-05-26              |
================================================
 - gui: rolBar can use position button to scroll text;
 - gui: button type: KEEP_PRESSING for buttons that will
        remain pressed until mouse is released, ignoring
		  if inner the button area;
 - Setting delta to sceneNode minY when lesser than 0;
 - script: new functions: callAnimation, setAnimation, playSound;
 - New script to controll cattle idle behaviour;
 - New script to controll beggars idle behaviour;
 - Added support to idtech4 (.md5*) models and animations;
 - 3D messages could be static on Y axis;
 - Lots of adjusts and fixes to the A* implementation;
 - Disabling vsync via OpenGL for better perfomance in OSX;
 - Verifying sight when NPC selecting target enemy and when 
   PC or NPC do an action;
 - Possibility to disable depth collision check on models where 
   the boundingBox check is enough;
 - Support for model's bump (normal) mapping;
 - Simplified number of skills to 12;
 - Removed the class Administration Student;
 - mapEditor: Support for skorpio OD tilesets;
 - New Models;
 - New Sound Effects and Music;

BugFixes:
 - sound: Fixed a possible double OpenAL stop when releasing an ogg_stream;
 - sound: Fixed a undesired loop with a sound file lesser than the buffer;
 - script: Fixed a bug on jumping from "else if" statements when an 
           "if" was successfull;
 - sound: keep music playing if try to load same music file;
 - map: fix for mapLights set;